kotlin/programming-kotlin_code/types/output/closeerr.output
closeerr.kts:3:9: error: unresolved reference: close
  input.close() //ERROR: unresolved reference: close
        ^
